# Agent-all-do-it

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ENV_VARS.md  MANUAL_STEPS.md  Makefile  PROJECT_STATE.md  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.neutralize.yml  docker-compose.prod.yml  docker-compose.w31f.yml  docker-compose.yml  run-workers.sh
backend/: .env.example  apply_compile_proposal_prompt_update.py  apply_hawk_prompt_update.py  apply_hawk_system_prompt_update.py  celerybeat-schedule  pyproject.toml  trigger_validation_run.py
backend/alembic/: env.py
backend/alembic/versions/: 0000_create_users.py  0001_create_organization_tables.py  0002_backfill_personal_orgs.py  0003_add_is_app_admin.py  0004_5_create_core_tables.py  0004_create_audit_log.py  0005_add_org_id_to_conversations_and_rag.py  0006_backfill_org_id_on_conversations.py  0007_create_knowledge_bases.py  0008_backfill_default_kbs.py  0009_conv_active_kb_ids.py  0019_projects_agents_knowledge.py  0020_app_settings.py  0021_workflows_runs_rooms.py  0022_per_agent_knowledge.py  0023_skills_recovery.py  2026-06-03_add_agent_templates.py  2026-06-03_add_handoffs_secrets_integrations.py  2026-06-03_add_knowledge_templates.py  2026-06-03_add_skills.py  2026-06-04_add_phase_b_tables.py  2026-06-04_add_project_members.py  2026-06-04_add_skill_versions.py  2026-06-04_project_scope_secrets_integrations.py  2026-06-05_add_context_compactions.py  2026-06-05_add_crypto_trading_tables.py  2026-06-05_harden_project_scope_for_operational_config.py  2026-06-05_project_chat_file_isolation.py  2026-06-06_add_crypto_extended_tables.py  2026-06-10_add_backtest_results.py  2026-06-12_add_crypto_raw_payloads.py  2026-06-14_indexes_idempotency_locking.py
backend/app/: main.py
backend/app/agents/: __init__.py  langgraph_assistant.py  supervisor.py
backend/app/api/: deps.py
backend/app/commands/: apply_runtime_profile.py  cleanup.py  encrypt_secrets.py  recovery.py  repair_kimi_runtime.py  risk_ack.py  seed.py  seed_agency_extended_bizops.py  seed_agency_extended_engineering.py  seed_agency_extended_other.py  seed_agent_templates.py  seed_crypto_workflow.py  seed_knowledge_templates.py  seed_skills.py
backend/app/core/: config.py  json_utils.py  logfire_setup.py  project_isolation.py  project_paths.py  rate_limit.py  rbac.py  runtime_catalog.py  sanitize.py  secret_crypto.py
backend/app/db/: locks.py
backend/app/repositories/: __init__.py  agent_config.py  agent_template.py  app_setting.py  chat_file.py  context_compaction.py  conversation.py  handoff.py  integration.py  knowledge.py  knowledge_template.py  message_rating.py  project.py  project_member.py  room.py  run.py  secret.py  skill.py  skill_version.py  user.py  user_slash_command.py  workflow.py
backend/app/schemas/: agent_chat.py  agent_config.py  agent_quality.py  agent_template.py  context_compaction.py  conversation.py  conversation_share.py  file.py  handoff.py  integration.py  knowledge.py  knowledge_template.py  metrics.py  project.py  readiness.py  room.py  run.py  secret.py  skill.py  skill_version.py  trading_settings_status.py  user_slash_command.py  workflow.py
backend/app/services/: admin.py  agent.py  agent_chat.py  agent_config.py  agent_quality.py  agent_session.py  agent_template.py  app_setting.py  backtest_engine.py  checkpoint_engine.py  claude_code.py  context_compaction.py  conversation.py  cost_guard.py  crypto_handoff_validator.py  crypto_persistence.py  demo_auto_approval.py  demo_auto_approval_execution_wiring.py  dna_memory.py  (+56 more)
backend/cli/: bridge_server.py  commands.py  kimi
backend/scripts/: sync_compile_proposal_prompt_6_14o.py  sync_compile_proposal_prompt_6_14r.py  trigger_full_loop_6_14n2.py  trigger_proposal_run_614n_service.py  update_compile_proposal_prompt_614m.py
backend/tests/: test_code_exec_disabled.py  test_commands.py  test_consecutive_loss_ack.py  test_context_compaction.py  test_core.py  test_crypto_raw_payloads.py  test_demo_mode_boundary.py  test_exchange_routing.py  test_exchange_tool_market_type.py  test_execution_idempotency.py  test_execution_preflight.py  test_futures_algo_order_routing.py  test_futures_fill_price_capture.py  test_handoff_contracts.py  test_hawk_handoff_validation.py  test_hawk_invalidation_level.py  test_hawk_output_repair.py  test_hawk_retry_coverage.py  test_http_request_ssrf.py  test_isolation.py  test_json_utils_614l.py  test_kill_switch_directional.py  test_kill_switch_failclosed.py  test_migrations.py  test_model_fallback.py  test_project_access.py  test_proposal_min_notional.py  test_proposal_sage_approved_6_14w14.py  test_rbac.py  test_repositories_teams.py  test_run_executor_exchange_execute_autonomous.py  test_run_status_classifier.py  test_run_status_normalizer.py  test_run_trade_outcome.py  test_runtime_adapters.py  test_runtime_catalog.py  test_runtime_profiles.py  test_secret_crypto.py  test_seed_schedule_preserve.py  test_services.py  (+4 more)
(+515 files in other folders)
