[project]
name = "pixel_dream_agent"
version = "0.1.0"
description = "A FastAPI project"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" },
]

dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.20",
    "logfire[fastapi,asyncpg]>=4.30.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.18.0",
    "greenlet>=3.2.0",
    # HMAC HS256 only — no asymmetric keys, no `cryptography` extra.
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "fastapi-pagination>=0.12.31",
    "celery[redis]>=5.6.0",
    "flower>=2.0.0",
    "langchain-core>=0.4.0",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=0.4.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint>=4.0.0",
    "langsmith>=0.4.0",
    "claude-code-sdk>=0.0.25",
    "croniter>=2.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "slowapi>=0.1.9",
    "ccxt>=4.5.57",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "anyio[trio]>=4.9.0",
    "pytest-cov>=6.1.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "ty>=0.0.29",
    "pre-commit>=4.0.0",
]

[project.scripts]
pixel_dream_agent = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E402", # module level import not at top (needed for conditional Jinja2 imports)
    "B008", # function call in default argument (needed for FastAPI Depends)
    "B905", # zip() without strict= (Python 3.10+ style, not needed)
    "RUF012", # mutable class attribute without ClassVar (used in parser base class)
    "RUF059", # unpacked variable never used (CLI destructuring pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [
    "alembic/",
    "tests/",
    "cli/",
    "app/commands/",
]

[tool.ty.rules]
# FastAPI Depends() injects at runtime — default=None on typed params is intentional
invalid-parameter-default = "warn"
# Starlette/FastAPI handler signatures use Union types that ty flags
invalid-argument-type = "warn"
# ORM models with Optional fields trigger on attribute assignment
invalid-assignment = "warn"
# Callable[..., Any] doesn't expose __name__ but function objects do
unresolved-attribute = "warn"
# datetime.utcnow deprecation warnings
deprecated = "warn"
# Optional deps imported inside try/except (pymupdf, docx, faker)
unresolved-import = "warn"
# dict() overload matching on dynamic types from validators
no-matching-overload = "warn"
# Template uses mypy-style `# type: ignore` comments which ty doesn't recognize
unused-type-ignore-comment = "warn"
# Operations on Unknown types from untyped libraries (pymupdf, etc.)
unsupported-operator = "warn"
# Third-party libs (langchain, redis-py) ship without complete type stubs;
# kwargs that work at runtime are flagged as unknown.
unknown-argument = "warn"
# redis-py / asyncio overloads return Awaitable[T] | T which ty rejects as awaitable
invalid-await = "warn"
# sessionmaker(class_=AsyncSession) returns sync sessionmaker per overloads
# but the resulting callable still produces an async context manager.
invalid-context-manager = "warn"
# Helpers like get_agent accept **kwargs but their stubs only list specific params
missing-argument = "warn"
# LangChain BaseMessage subclasses (AIMessage etc.) carry tool_calls only on
# specific subclasses; ty cannot narrow via hasattr().
not-iterable = "warn"
# Return-type widening for langgraph .compile() (StateGraph vs CompiledStateGraph)
invalid-return-type = "warn"
# CrewAI/langgraph runtime classes use kwargs that ty stubs don't enumerate
invalid-type-form = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/core/logfire_setup.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.fastapi-fullstack]
generator_version = "0.2.10"
generated_at = "2026-05-31T12:38:15.618568+00:00"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
